--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,20 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" > <%= link_to 'Index', students_path %> </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"><%= link_to 'Landing', pages_landing_path %> </a>
+        </li>
+
+      </ul>
+    </div>
+  </nav>
   <body>
     <%= yield %>
   </body>
